Widget: Fix time not showing on new trigger

--- a/widgets/time-switch/css/TimeTrigger.css
+++ b/widgets/time-switch/css/TimeTrigger.css
@@ -10,5 +10,5 @@ input:invalid {
 
 input {
 	font-size: 1.2rem;
-	width: 100px;
+	width: 150px;
 }
